--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html>
 <head>
 
-  <title>taaabs-remote-ressources</title>
+  <title>taaabs-remote-resources</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
