--- a/taaabs-remote-resources.html
+++ b/taaabs-remote-resources.html
@@ -1,7 +1,7 @@
 <script src="../jquery/dist/jquery.min.js"></script>
 <script src="../jsonld/js/jsonld.js"></script>
 
-<dom-module id="taaabs-remote-ressources">
+<dom-module id="taaabs-remote-resources">
   <style>
     :host {
       display: block;
@@ -27,13 +27,13 @@
     /* global Polymer, Samotraces */
     (function () {
       /**
-       * `<taaabs-remote-ressources>` is a graphical representation of the user choice for an available resource on the KTBS.
+       * `<taaabs-remote-resources>` is a graphical representation of the user choice for an available resource on the KTBS.
        *
        * @use Samotraces.Ktbs.Resource
-       * @element taaabs-remote-ressources
+       * @element taaabs-remote-resources
        */
       Polymer({
-        is: 'taaabs-remote-ressources',
+        is: 'taaabs-remote-resources',
         properties: {
           /**
            * Browser-side URL
